# cells-evolution

./: CMakeLists.txt  imgui.ini  main.cpp
include/CellsEvo/: Core.h  Graphics.h  app.h  base.h  cell.h  cell_generator.h  collision_resolution.h  core.h  events.h  food.h  food_generator.h  geometry.h  graphics.h  gui.cpp  gui.h  tools.h  types.h  world.h
include/CellsEvo/Core/: App.h  Drawer.h
include/CellsEvo/Graphics/: Drawer.h
include/CellsEvo/app/: app.h  gui.h
include/CellsEvo/core/: app.h  base.h  cell.h  cell_generator.h  clan.h  collision_resolution.h  events.h  food.h  food_generator.h  genes.h  geometry.h  logic.h  tools.h  types.h  world.h
include/CellsEvo/core/genetics/: engineer.h  genes.h
include/CellsEvo/core/logic/: cell_logic.h  hunter_logic.h  logic.h  non_hunter_logic.h
include/CellsEvo/genetics/: engineer.h  genes.h
include/CellsEvo/graphics/: camera.h  drawer.h
include/CellsEvo/logic/: cell_logic.h  logic.h
include/SFML/: Config.hpp  Graphics.hpp
include/SFML/Graphics/: CircleShape.hpp  ConvexShape.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderTarget.hpp  RenderWindow.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp
include/SFML/System/: String.hpp  Thread.hpp  Utf.hpp  Vector2.hpp  Vector3.hpp
include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Window.hpp
include/imgui/: imconfig-SFML.h  imconfig.h  imgui-SFML.cpp  imgui-SFML.h
include/imgui/backends/: imgui_impl_osx.mm
lib/: libsfml-graphics.2.5.1.dylib  libsfml-network.2.5.1.dylib  libsfml-window.2.5.1.dylib
src/: app.cpp  cell.cpp  cell_generator.cpp  collision_resolution.cpp  events.cpp  events.h  food.cpp  geometry.cpp  gui.cpp  main.cpp  tools.cpp  world.cpp
src/Core/: App.cpp  Cell.cpp
src/Graphics/: Drawer.cpp
src/app/: app.cpp  gui.cpp
src/core/: app.cpp  cell.cpp  cell_generator.cpp  clan.cpp  collision_resolution.cpp  events.cpp  food.cpp  food_generator.cpp  genes.cpp  geometry.cpp  logic.cpp  tools.cpp  world.cpp
src/core/genetics/: engineer.cpp  genes.cpp
src/core/logic/: cell_logic.cpp  hunter_logic.cpp  logic.cpp  non_hunter_logic.cpp
src/genetics/: engineer.cpp  genes.cpp
src/graphics/: camera.cpp  drawer.cpp
src/logic/: cell_logic.cpp  logic.cpp
